--- a/code/CSScode/basic/11.html
+++ b/code/CSScode/basic/11.html
@@ -22,7 +22,8 @@
         
             比较优先级时，需要将所有的选择器的优先级进行相加计算，最后优先级越高，则越优先显示（分组选择器时单独计算的）
                 选择器的累加不会超过其最大的数量级，类选择器再高也不会超过id选择器
-                如果优先级计算后相同，此时优先使用靠下的样式   
+                如果优先级计算后相同，此时优先使用靠下的样式
+                继承的权重是0   
 
             可以在某一个样式的后边添加！important，则此时该样式会获得最高的优先级
                 注意，在开发中慎用！
