--- a/code/CSScode/exercise/01.html
+++ b/code/CSScode/exercise/01.html
@@ -23,7 +23,7 @@
             /* 裁剪溢出的内容 */
             overflow: hidden;
 
-            /* 使ul在页面中居中（实际示例中不需要 */
+            /* 使ul在页面中居中（实际示例中不需要) */
             margin: 50px auto;
             background-color: #f4f4f4;
         }
