--- a/code/CSScode/exercise/06.html
+++ b/code/CSScode/exercise/06.html
@@ -6,15 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body{
+        font: 16px/26px;
+    }
+    p {
+        text-indent: 2em;
+    }
+    h1{
+        font-weight: normal;
+        text-align: center;
+    }
+    div{
+        text-align: center;
+    }
+</style>
 
 <body>
     <h1>中乙队赛前突然换帅仍胜毅腾 高原黑马欲阻击舜天</h1>
     <div>
         2017年07月16日20:11 新浪体育 评论中大奖 （11人参与） 收藏本文</div>
-        <hr>
+    <hr>
     <p>
 
-新浪体育讯　7月16日是燕京啤酒[微博]2017中国足协杯第三轮比赛，丽江嘉云昊队主场迎战哈尔滨毅腾队的比赛日。然而就在比赛日中午，丽江嘉云昊队主帅李虎和另外两名成员悄然向俱乐部提出了辞呈，并且收拾行囊准备离开。在这样的情况下，丽江嘉云昊队不得不由此前的教练员杨贵东代理指挥了本场比赛。
+        新浪体育讯　7月16日是燕京啤酒[微博]2017中国足协杯第三轮比赛，丽江嘉云昊队主场迎战哈尔滨毅腾队的比赛日。然而就在比赛日中午，丽江嘉云昊队主帅李虎和另外两名成员悄然向俱乐部提出了辞呈，并且收拾行囊准备离开。在这样的情况下，丽江嘉云昊队不得不由此前的教练员杨贵东代理指挥了本场比赛。
+
+    </p>
+    <p>
 
         在昨日丽江嘉云昊队主帅李虎就缺席了赛前的新闻发布会，当时俱乐部给出的解释是李虎由于身体欠佳，去医院接受治疗。然而今日李虎出现在俱乐部时，向记者否认了这一说法，并且坦言已经向俱乐部提出了辞呈。
 
