--- a/code/CSScode/float/01.html
+++ b/code/CSScode/float/01.html
@@ -27,6 +27,7 @@
                         浮动元素不会盖住其他的浮动元素，向左或向右移动时，不会超过它前边的其他浮动元素
                         如果浮动元素的上边是一个没有浮动的块元素，则浮动元素无法上浮
                         浮动元素不会超过它上边的浮动的兄弟元素，最多就是和它一样高
+                        浮动不会压住文字或图片
 
              */
             float: left;
