--- a/code/CSScode/position/01.html
+++ b/code/CSScode/position/01.html
@@ -72,11 +72,18 @@
                                         如果所有的祖先元素都没开启定位，则根元素就是它的包含块
                                         html（根元素，初始包含块）
 
+                            绝对定位固定在父元素中心通过以下两步实现
+                                left: 50%; :让盒子的左侧移动到父级元素的水平中心位置
+                                margin-left: **** :让盒子向左移动自身宽度的一半
+
                     固定定位
                         当元素的position属性值为fixed时则开启了固定定位
                         固定定位也是一种绝对定位，所以固定定位的大部分特点与绝对定位一样
                             唯一不同的是固定定位永远参照于浏览器的视口进行定位
                             固定定位的元素不会随网页的滚动条滚动
+                        固定在版心右侧通过以下两步实现
+                        left 50% 设置为可视区域宽度的一半
+                        margin-left 设置版心宽度的一半
 
                     粘滞定位
                         当元素的position属性值为sticky时则开启了粘滞定位
