--- a/code/CSScode/advanced/03.html
+++ b/code/CSScode/advanced/03.html
@@ -11,6 +11,7 @@
             outline: none;
         }
         textarea{
+            /* 取消文本框右下角 */
             resize: none;
         }
     </style>
