--- a/code/CSScode/exercise/studyDemo/index.html
+++ b/code/CSScode/exercise/studyDemo/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<!-- user -->
 		<div class="user">
-			<img src="images/user.jpg" alt="">
+			<img src="images/user.jpg" alt="" style="vertical-align: middle;">
 			Qian
 		</div>
 	</div>
