--- a/前端体系课/第一阶段/自由编程/index.html
+++ b/前端体系课/第一阶段/自由编程/index.html
@@ -35,7 +35,15 @@
         <!-- banner遮罩层 -->
         <div>banner遮罩层</div>
         <!-- banner表单 -->
-        <div>banner表单</div>
+        <div>
+            <form action="">
+                <input type="text" placeholder="your Name">
+                <input type="text" placeholder="your Phone">
+                <input type="email" placeholder="your Email">
+                <textarea name=""  id="" cols="30" rows="10" placeholder="Write Your Comment Here"></textarea>
+                <input type="submit" value="SEND MESSAGE">
+            </form>
+        </div>
     </section>
 
     <!-- about区域 -->
