--- a/前端体系课/小慕医生/index.html
+++ b/前端体系课/小慕医生/index.html
@@ -8,53 +8,60 @@
     <title>小慕医生 - 责任、品质、关爱</title>
     <meta name="Keywords" content="美容，减脂，内科，外科">
     <meta name="Description" content="小慕医生是专业的医院，理念就是责任、品质、关爱">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- 页面头部 -->
     <header>
-        <!-- 网页的logo -->
-        <div class="logo">
-            <h1>小慕医生</h1>
-        </div>
-        <!-- 网页的功能区 -->
-        <div class="tool">
-            <div class="r1">
-                <img src="images/tel.png" alt="">
-                <span class="telnumber">088-88888888</span>
-                <a href="">
-                    <img src="images/chinese_icon.png" alt="">
-                </a>
-                <a href="">
-                    <img src="images/english_icon.png" alt="">
-                </a>
+        <div class="header-top">
+            <!-- 网页的logo -->
+            <div class="logo">
+                <h1>小慕医生</h1>
             </div>
-            <div class="r2">
-                <input type="text" placeholder="找医生/科室..">
-                <button><img src="images/search.png" alt=""></button>
+            <!-- 网页的功能区 -->
+            <div class="tool">
+                <div class="r1">
+                    <img class="tel" src="images/tel.png" alt="">
+                    <span class="telnumber">088-88888888</span>
+                    <a href="">
+                        <img class="chinese_icon icon" src="images/chinese_icon.png" alt="">
+                    </a>
+                    <a href="">
+                        <img class="english_icon icon" src="images/english_icon.png" alt="">
+                    </a>
+                </div>
+                <div class="r2">
+                    <input type="text" placeholder="找医生/科室..">
+                    <button><img src="images/search.png" alt=""></button>
+                </div>
             </div>
         </div>
         <!-- 网页的导航条 -->
         <nav class="main-nav">
             <ul>
-                <li>首页</li>
-                <li>医院概括</li>
-                <li>医院动态</li>
-                <li>专家学科</li>
-                <li>服务指南</li>
-                <li>医院文化</li>
-                <li>信息公开</li>
-                <li>互动交流</li>
+                <li class="cur"><a href="#">首页</a></li>
+                <li><a href="#">医院概括</a></li>
+                <li><a href="#">医院动态</a></li>
+                <li><a href="#">专家学科</a></li>
+                <li><a href="#">服务指南</a></li>
+                <li><a href="#">医院文化</a></li>
+                <li><a href="#">信息公开</a></li>
+                <li><a href="#">互动交流</a></li>
             </ul>
         </nav>
     </header>
     <!-- 网页的banner -->
     <section class="banner">
-        <img src="images/banner.png" alt="">
-        <h2>责任、科学、严谨</h2>
-        <!-- 小圆点 -->
+        <img class="banner-img" src="images/banner.png" alt="">
+        <div class="center">
+            <h2>责任、科学、严谨</h2>
+            <a href="#" class="left-btn"></a>
+            <a href="#" class="right-btn"></a>
+        </div>
+        <!-- 小圆点 ol标签绝对定位，li浮动-->
         <ol>
-            <li></li>
+            <li class="cur"></li>
             <li></li>
             <li></li>
             <li></li>
