--- a/前端体系课/第一阶段/自由编程/index.html
+++ b/前端体系课/第一阶段/自由编程/index.html
@@ -43,40 +43,50 @@
                 <input class="formitem" type="text" placeholder="your Name">
                 <input class="formitem" type="text" placeholder="your Phone">
                 <input class="formitem" type="email" placeholder="your Email">
-                <textarea class="formitem" name="" id="" cols="30" rows="10" placeholder="Write Your Comment Here"></textarea>
+                <textarea class="formitem" name="" id="" cols="30" rows="10"
+                    placeholder="Write Your Comment Here"></textarea>
                 <input class="submit formitem" type="submit" value="SEND MESSAGE">
             </form>
         </div>
     </section>
 
     <!-- about区域 -->
-    <section class="about">
-        <!-- about上半部分 -->
-        <div class="about-top">
-            <h2>ABOUT</h2>
-            <p>分割线</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s.</p>
-        </div>
-        <!-- about下半部分 -->
-        <div class="about-bottom">
-            <h2>A WORD ABOUT US</h2>
-            <p>Praesent dignissim viverra est, sed bibendum ligula congue non. Sed ac nisl et felis gravida commodo?
-                Suspendisse eget ullamcorper ipsum. Suspendisse diam amet.</p>
-            <div>EXPLORE</div>
-            <img src="images/bb3.jpg" alt="">
-
-            <div>
-                <p>700000</p>
-                <p>分割线</p>
-                <div>Students</div>
-                <p>600</p>
-                <p>分割线</p>
-                <div>Faculty</div>
+    <section>
+        <div class="about">
+            <!-- about上半部分 -->
+            <div class="about-top">
+                <h2>ABOUT</h2>
+                <div class="split-line"></div>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.</p>
             </div>
+            <!-- about下半部分 -->
+            <div class="about-bottom">
+                <h2>A WORD ABOUT US</h2>
+                <div class="indru">
+                    <p>Praesent dignissim viverra est, sed bibendum ligula congue non. Sed ac nisl et felis gravida
+                        commodo?
+                        Suspendisse eget ullamcorper ipsum. Suspendisse diam amet.</p>
+                    <div class="btn">EXPLORE</div>
+                </div>
+                <div class="image"><img src="images/bb3.jpg" alt=""></div>
+                <div class="right-aside">
+                    <div class="seven box">
+                        <div class="title">70000</div>
+                        <div class="split-line"></div>
+                        <div class="message">Students</div>
+                    </div>
+                    <div class="six box">
+                        <div class="title">600</div>
+                        <div class="split-line"></div>
+                        <div class="message">Faculty</div>
+                    </div>
+                </div>
 
+            </div>
         </div>
     </section>
+
 
     <!-- 图文混排区域 -->
     <section class="image-text">
@@ -88,6 +98,8 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
             <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
                 took a galley of type and scrambled it to make a type specimen book.</p>
+            <div class="btn">EXPLORE</div>
+            <div class="left-triangle"></div>
         </div>
         <div class="image3">
             <img src="images/b2.jpg" alt="">
@@ -97,74 +109,82 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
             <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
                 took a galley of type and scrambled it to make a type specimen book.</p>
-        </div>
-        <div class="image5">
-            <img src="images/b3.jpg" alt="">
+            <div class="btn">EXPLORE</div>
+            <div class="left-triangle"></div>
         </div>
         <div class="text6">
             <h3>Conference Hall</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
             <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
                 took a galley of type and scrambled it to make a type specimen book.</p>
+            <div class="btn">EXPLORE</div>
+            <div class="right-triangle"></div>
         </div>
-        <div class="image7">
-            <img src="images/b4.jpg" alt="">
+        <div class="image5">
+            <img src="images/b3.jpg" alt="">
         </div>
         <div class="text8">
             <h3>Play Ground</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
             <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
                 took a galley of type and scrambled it to make a type specimen book.</p>
+            <div class="btn">EXPLORE</div>
+            <div class="right-triangle"></div>
+        </div>
+        <div class="image7">
+            <img src="images/b4.jpg" alt="">
         </div>
     </section>
 
     <!-- gallery区域 -->
-    <section class="gallery">
-        <!-- gallery上半部分 -->
-        <div class="gallery-top">
-            <h2>GALLERY</h2>
-            <p>分割线</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s.</p>
-        </div>
-        <!-- gallery下半部分 -->
-        <div class="gallery-bottom">
-            <dl>
-                <dt>
-                    <img src="images/03-01.jpg" alt="">
-                </dt>
-                <dd>Science Lab</dd>
-            </dl>
-            <dl>
-                <dt>
-                    <img src="images/03-02.jpg" alt="">
-                </dt>
-                <dd>Indoor Stadium</dd>
-            </dl>
-            <dl>
-                <dt>
-                    <img src="images/03-03.jpg" alt="">
-                </dt>
-                <dd>Transportation</dd>
-            </dl>
-            <dl>
-                <dt>
-                    <img src="images/03-04.jpg" alt="">
-                </dt>
-                <dd>Kids Room</dd>
-            </dl>
-            <dl>
-                <dt>
-                    <img src="images/03-05.jpg" alt="">
-                </dt>
-                <dd>Meditation Classes</dd>
-            </dl>
-            <dl>
-                <dt>
-                    <img src="images/03-06.jpg" alt="">
-                </dt>
-                <dd>Kids Play Ground</dd>
-            </dl>
+    <section>
+        <div class="gallery">
+            <!-- gallery上半部分 -->
+            <div class="gallery-top">
+                <h2>GALLERY</h2>
+                <div class="split-line"></div>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.</p>
+            </div>
+            <!-- gallery下半部分 -->
+            <div class="gallery-bottom">
+                <dl>
+                    <dt>
+                        <img src="images/03-01.jpg" alt="">
+                    </dt>
+                    <dd>Science Lab</dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <img src="images/03-02.jpg" alt="">
+                    </dt>
+                    <dd>Indoor Stadium</dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <img src="images/03-03.jpg" alt="">
+                    </dt>
+                    <dd>Transportation</dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <img src="images/03-04.jpg" alt="">
+                    </dt>
+                    <dd>Kids Room</dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <img src="images/03-05.jpg" alt="">
+                    </dt>
+                    <dd>Meditation Classes</dd>
+                </dl>
+                <dl>
+                    <dt>
+                        <img src="images/03-06.jpg" alt="">
+                    </dt>
+                    <dd>Kids Play Ground</dd>
+                </dl>
+            </div>
         </div>
     </section>
 
