--- a/前端体系课/慕云游/index.html
+++ b/前端体系课/慕云游/index.html
@@ -763,7 +763,7 @@
     </section>
 
     <!-- 机酒自由行 -->
-    <section class="jjzyx content-part">
+    <section class="jjzyx content-part common-style">
         <div class="center-wrap">
             <div class="hd clearfix">
                 <h2>机酒自由行</h2>
@@ -985,6 +985,354 @@
             </div>
         </div>
     </section>
+
+    <!-- 特色当地体验 -->
+    <section class="tsddty content-part">
+        <div class="center-wrap">
+            <div class="hd">
+                <h2>特色当地体验</h2>
+            </div>
+            <div class="bd">
+                <ul>
+                    <li>
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/tsddty1.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                <p class="proname">香港迪士尼乐园门票(一日 / 两日) - 无需换票扫码入园）</p>
+                                <p>
+                                    <span class="score">⭐️ 4.8</span>
+                                    <span class="comment">（92833评价)2334.69k 人参加过</span>
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/tsddty2.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                <p class="proname">罗马金宫剧场人妖秀</p>
+                                <p>
+                                    <span class="score">⭐️ 4.6</span>
+                                    <span class="comment">（440条评价)900K+ 人参加过</span>
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/tsddty3.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                <p class="proname">京都和服体验 - 梦馆</p>
+                                <p>
+                                    <span class="score">⭐️ 4.7</span>
+                                    <span class="comment">（（4,293条评价)50K+ 人参加过</span>
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/tsddty4.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                <p class="proname">英国巨石阵 & 温莎城堡 & 巴斯罗马浴场一日游</p>
+                                <p>
+                                    <span class="score">⭐️ 4.5</span>
+                                    <span class="comment">（2,104条评价)20K+ 人参加过</span>
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- 最世界·深度旅行 -->
+    <section class="zsjsdlx content-part common-style">
+        <div class="center-wrap">
+            <div class="hd clearfix">
+                <h2>最世界·深度旅行</h2>
+                <em>摆脱千篇一律的旅行，探索属于自己的世界</em>
+                <nav>
+                    <ul>
+                        <li class="current">
+                            <a href="">城市CityWalk</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="bd">
+                <ul>
+                    <li class="big-grid havehover">
+                        <a href="">
+                            <div class="mask"></div>
+                            <div class="circle">
+                                <p>城市CityWalk</p>
+                            </div>
+                            <div class="word">
+                                【City Walk】大阪浪花の城——美食、动漫和不为人知的大阪人辛秘生活
+                            </div>
+                            <img src="images/yh.png" alt="">
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/zsj2.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                [City Walk] 京都伏见稻荷大社日本清酒厂巡礼半日游——赏千本鸟居…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/zsj3.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                [City Walk] 京都好物—京都达人带你探店、美物、饮茶、艺术、日杂…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/zsj4.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                [Citywalk] 一日游禅意京都——千年古都的维新之路…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/zsj5.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                [City Walk] 日本桥— 穿街走巷看东京，感受大城市的市井人情…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/zsj6.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                [Citywalk] 将军之道—京都绝景之旅(含米其林午餐）…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="more-grid">
+                        <a href="">
+                            <p>查看更多</p>
+                            <p>深度旅行产品</p>
+                            <span class="iconfont icon-youjiantou"></span>
+                            <ul>
+                                <li>日游</li>
+                                <li>周末</li>
+                                <li>亲子</li>
+                                <li>长线</li>
+                            </ul>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- 跟团/半自助游 -->
+    <section class="gtbzzy content-part common-style">
+        <div class="center-wrap">
+            <div class="hd clearfix">
+                <h2>跟团/半自助游</h2>
+                <em>旅游需要好的选择，踏实省心</em>
+                <nav>
+                    <ul>
+                        <li class="current">
+                            <a href="">半自助游</a>
+                        </li>
+                        <li>
+                            <a href="">城市CityWalk</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="bd">
+                <ul>
+                    <li class="big-grid havehover">
+                        <a href="">
+                            <div class="mask"></div>
+                            <div class="circle">
+                                <p>半自助游</p>
+                                <!-- <p>CityWalk</p> -->
+                            </div>
+                            <div class="word">
+                                天津直飞沙巴5-6天半自助游（自由活动+出海两岛游+市区游+多种星级酒店）
+                            </div>
+                            <img src="images/yh.png" alt="">
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/gt2.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                成都/西安直飞清迈+拜县6-7天半自助游（2-8人纯玩私家小包团+萌妹子…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/gt3.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                [一价全含] 北京直飞日本东京+大阪+名古屋+京都6/7天深度游（全程三…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/gt4.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                天津直飞芽庄5-7天半自助游（优质越南/越捷航空，12天自由行/赠送京…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/gt5.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                广州直飞美娜多5-6半自助游（班达尼莫公园+布纳肯浮潜+1-2天自由活动…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="pro-grid">
+                        <a href="">
+                            <div class="picbox">
+                                <img src="images/gt6.png" alt="">
+                            </div>
+                            <div class="wordbox">
+                                (免签入境）深圳直飞伊朗德黑兰8天5晚半自助游（含国际往返机票+伊…
+                            </div>
+                        </a>
+                    </li>
+                    <li class="more-grid">
+                        <a href="">
+                            <p>查看更多</p>
+                            <p>深度旅行产品</p>
+                            <span class="iconfont icon-youjiantou"></span>
+                            <ul>
+                                <li>跟团游</li>
+                                <li>半自助游</li>
+                            </ul>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- 页脚 -->
+    <footer>
+        <div class="part1">
+            <div class="center-wrap">
+                <nav>
+                    <ul class="clearfix">
+                        <li>
+                            <a href="">机酒自由行</a>
+                        </li>
+                        <li>
+                            <a href="">当地玩乐</a>
+                        </li>
+                        <li>
+                            <a href="">优惠机票</a>
+                        </li>
+                        <li>
+                            <a href="">签证</a>
+                        </li>
+                        <li>
+                            <a href="">马尔代夫</a>
+                        </li>
+                        <li>
+                            <a href="">邮轮</a>
+                        </li>
+                        <li>
+                            <a href="">租车自驾</a>
+                        </li>
+                        <li>
+                            <a href="">欧洲铁路</a>
+                        </li>
+                        <li>
+                            <a href="">新鲜甩尾</a>
+                        </li>
+                        <li>
+                            <a href="">深度旅行</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="clearfix dlbox">
+                    <dl class="txfw">
+                        <dt>贴心服务</dt>
+                        <dd>我们收集慕云游者的真实诉求，找寻特色旅行目的地，让慕云游者放心出行</dd>
+                    </dl>
+                    <dl class="ccsx">
+                        <dt>层层筛选</dt>
+                        <dd>对旅游产品供应商严格筛选，资质层层把关</dd>
+                    </dl>
+                    <dl class="axph">
+                        <dt>安心陪护</dt>
+                        <dd>对慕云游者的购买进行跟踪服务以及质量监控，生效投诉先行赔付，出现问题及时解决</dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
+        <div class="part2">
+            <div class="center-wrap">
+                <div class="r1 clearfix">
+                    <h2>慕云游商城</h2>
+                    <p class="slogan">从一张机票、一家酒店的订购，到一次暖心的接机服务、一张轻松融入当地的交通卡
+                        让我们带你探索这个世界</p>
+                </div>
+                <div class="links clearfix">
+                    <ul>
+                        <li><a href="">关于慕云游商城</a></li>
+                        <li><a href="">服务与隐私</a></li>
+                        <li><a href="">联系我们</a></li>
+                        <li><a href="">旅游度假资质</a></li>
+                        <li><a href="">营业执照</a></li>
+                        <li><a href="">投诉建议</a></li>
+                    </ul>
+                </div>
+                <div class="copyrights">
+                    &copy; 2020 imooc.com  京ICP备 12003892号-11 京公网安备11010802030151号 <a href="">营业执照</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+     <!-- 返回顶部按钮 -->
+     <a href="javascript:;" class="backtotop" id="backtotop">
+        返回<br>顶部
+    </a>
+
 </body>
 
 </html>
