--- a/前端体系课/第一阶段/作业/17.html
+++ b/前端体系课/第一阶段/作业/17.html
@@ -25,7 +25,7 @@
         let year = Number(prompt('请输入年份'))
         alert(year % 4 == 0 && year % 100 != 0 || year % 100 == 0 && year % 400 == 0)
     </script> -->
-
+    <!-- 
     <script>
         let n = 0,
             sum = 0;
@@ -34,7 +34,9 @@
             sum += n;
         }
         alert(n)
-    </script>
+    </script> -->
+
+
 </body>
 
 </html>
