--- a/前端体系课/第一阶段/HouseHold/index.html
+++ b/前端体系课/第一阶段/HouseHold/index.html
@@ -12,7 +12,227 @@
 </head>
 
 <body>
+    <!-- top区域 -->
+    <div class="top">
+        <div class="center-wrap">
+            服务热线：400-8888-888
+        </div>
+    </div>
 
+    <!-- header区域 -->
+    <header>
+        <div class="center-wrap">
+            <!-- logo区域 -->
+            <a href="">
+                <div class="logo"></div>
+            </a>
+            <!-- 中间导航区域 -->
+            <div class="main-nav">
+                <ul>
+                    <li>
+                        <a href="">
+                            <div class="icon wzsy "></div>
+                            <div class="wordbox">网站首页</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="icon gywm"></div>
+                            <div class="wordbox">关于我们</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="icon fwjs"></div>
+                            <div class="wordbox">服务建设</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="icon cpzx"></div>
+                            <div class="wordbox">产品中心</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="icon fwdt"></div>
+                            <div class="wordbox">服务大厅</div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 右侧搜索框 -->
+            <div class="search">
+                <input type="text" placeholder="请输入搜索内容">
+                <button><img src="images/search.png" alt=""></button>
+            </div>
+        </div>
+    </header>
+
+    <!-- banner区域 -->
+    <section class="banner">
+        <a href="">
+            <img class="banner-img" src="images/banner01.png" alt="">
+            <!-- 小圆点 利用ol标签绝对定位，li浮动-->
+            <ol>
+                <li class="cur"></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </a>
+    </section>
+
+    <!-- 商品区域 -->
+    <section class="goods">
+        <div class="center-wrap">
+            <div class="btn leftbtn"></div>
+            <div class="btn rightbtn"></div>
+            <ul>
+                <li>
+                    <div class="picbox"><img src="images/product01.png" alt=""></div>
+                    <div class="wordbox">时尚卫生间墙面颜色
+                        2029装饰设计</div>
+                </li>
+                <li>
+                    <div class="picbox"><img src="images/product02.png" alt=""></div>
+                    <div class="wordbox">现代北欧风格厨房装
+                        2029饰效果图</div>
+                </li>
+                <li>
+                    <div class="picbox"><img src="images/product03.png" alt=""></div>
+                    <div class="wordbox">现代时尚北欧风格卧
+                        2029室装饰画</div>
+                </li>
+                <li>
+                    <div class="picbox"><img src="images/product04.png" alt=""></div>
+                    <div class="wordbox">130平简约现代北欧
+                        2029风格装修</div>
+                </li>
+                <li>
+                    <div class="picbox"><img src="images/product05.png" alt=""></div>
+                    <div class="wordbox">现代北欧风格小客厅
+                        2029装修设计</div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- 了解我们区域 -->
+    <section class="about">
+        <div class="center-wrap ">
+            <div class="title">
+                <h2>了解我们</h2>
+                <p>about us</p>
+            </div>
+            <div class="gywm">
+                <h2>关于我们</h2>
+                <p>慕家居装饰材料有限公司</p>
+                <p>慕家居家居装修网北欧风格家具图片专区,是国内海量全面的高质量北欧风格家具图片库…</p>
+                <button>了解更多</button>
+            </div>
+            <div class="image"><img src="images/ljwm.png" alt=""></div>
+            <div class="second-nav">
+                <div class="navbox zxly">
+                    <div>
+                        <p>在线留言</p>
+                        <p>on-line message</p>
+                    </div>
+
+                </div>
+                <div class="navbox ggjy">
+                    <div>
+                        <p>广告经营</p>
+                        <p>Advertising management</p>
+                    </div>
+
+                </div>
+                <div class="navbox wlzx">
+                    <div>
+                        <p>网络咨询</p>
+                        <p>Network consultation</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 精品推荐区域 -->
+    <section class="jptj">
+        <div class="center-wrap ">
+            <div class="title">
+                <h2>精品推荐</h2>
+                <p>Boutique recommendation</p>
+            </div>
+            <ul>
+                <div class="btn leftbtn"></div>
+                <div class="btn rightbtn"></div>
+                <li>
+                    <img src="images/recommend1.png" alt="">
+                    <div class="mask">轻奢风格样板房客厅色彩搭配装修设计</div>
+                </li>
+                <li>
+                    <img src="images/recommend2.png" alt="">
+                    <div class="mask">简约美式风格卧室衣柜设计</div>
+
+                </li>
+                <li>
+                    <img src="images/recommend3.png" alt="">
+
+                    <div class="mask">轻奢风格L型厨房装修设计</div>
+                </li>
+            </ul>
+    </section>
+
+    <!-- 新闻中心区域 -->
+    <section class="news">
+        <div class="center-wrap">
+            <div class="title">
+                <h2>新闻中心</h2>
+                <p>press center</p>
+            </div>
+            <ol>
+                <li>
+                    <div class="wordbox">
+                        <p>最新招标</p>
+                        <p>重庆业主要求：一居室的户型，想把阳台利用起来，改成一室一厅的户型，业主表示已经请朋友把以前的装修敲了，现在基本是毛坯的状态……</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="wordbox">
+                        <p>最新招标</p>
+                        <p>重庆业主要求：一居室的户型，想把阳台利用起来，改成一室一厅的户型，业主表示已经请朋友把以前的装修敲了，现在基本是毛坯的状态……</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="wordbox">
+                        <p>最新招标</p>
+                        <p>重庆业主要求：一居室的户型，想把阳台利用起来，改成一室一厅的户型，业主表示已经请朋友把以前的装修敲了，现在基本是毛坯的状态……</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="wordbox">
+                        <p>最新招标</p>
+                        <p>重庆业主要求：一居室的户型，想把阳台利用起来，改成一室一厅的户型，业主表示已经请朋友把以前的装修敲了，现在基本是毛坯的状态……</p>
+                    </div>
+                </li>
+            </ol>
+        </div>
+    </section>
+
+    <!-- 页脚区域 -->
+    <section class="foot">
+        <div class="center-wrap">
+            <div class="title">慕家居</div>
+            <div class="message">
+                <p>咨询电话：010-88888888</p>
+                <p>公司网址：www.imooc.com</p>
+                <p>邮箱：KEFU@IMOOC.com</p>
+            </div>
+        </div>
+    </section>
+    <footer class="beian">
+        Copyright © 2020 imooc.com All Rights Reserved | 京ICP备 
+    </footer>
 </body>
 
 </html>
