--- a/前端体系课/第一阶段/测试/21.html
+++ b/前端体系课/第一阶段/测试/21.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>使用定时器实现动画</title>
+    <style>
+        #box {
+            position: absolute;
+            top: 100px;
+            left: 100px;
+            width: 100px;
+            height: 100px;
+            background-color: orange;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <!-- 不实用，基本淘汰 -->
+    <button id="btn">开始运动</button>
+    <div id="box"></div>
+
+    <script>
+        let btn = document.getElementById('btn');
+        let box = document.getElementById('box');
+
+        let left = 100;
+
+        btn.onclick = function () {
+            setInterval(() => {
+                // 改变全局变量
+                left += 2;
+                box.style.left = left + 'px'
+            }, 20);
+        }
+    </script>
 </body>
+
 </html>
