--- a/前端体系课/第一阶段/作业/12.html
+++ b/前端体系课/第一阶段/作业/12.html
@@ -19,7 +19,7 @@
             font-weight: bold;
             /*添加代码*/
             transform: scale(1);
-            transition: all 1s ease 0s;
+            transition: all 1s cubic-bezier(.19, .95, 1, -0.09) 0s;
         }
 
         #myTest:hover {
