--- a/前端体系课/第一阶段/测试/32.html
+++ b/前端体系课/第一阶段/测试/32.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <h1>2022高考倒计时</h1>
+    <h1>2022考研倒计时</h1>
     <h2 class="info"></h2>
     <script>
         let info = document.querySelector('.info');
-        let td = new Date(2022, 5, 7);
+        let td = new Date(2022, 12, 26);
 
         setInterval(function () {
             let nd = new Date();
