--- a/interview/code/CSS/圣杯布局1.html
+++ b/interview/code/CSS/圣杯布局1.html
@@ -5,42 +5,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>圣杯布局</title>
     <style>
-                body {
+        body {
             min-width: 550px;
         }
+
         #header {
             text-align: center;
             background-color: #f1f1f1;
         }
 
         #container {
-           
+            padding-left: 200px;
+            padding-right: 150px;
         }
+
         #container .column {
             float: left;
         }
 
         #center {
-            position: relative;
             background-color: #ccc;
             width: 100%;
         }
+
         #left {
+            position: relative;
             background-color: yellow;
             width: 200px;
-            left: 200px;
+            margin-left: -100%;
+            right: 200px;
         }
+
         #right {
             background-color: red;
             width: 150px;
+            margin-right: -150px;
         }
 
+
         #footer {
-            clear: both;
+            /* clear: both; */
             text-align: center;
             background-color: #f1f1f1;
+        }
+
+        .clearfix::after {
+            content: '';
+            display: table;
+            clear: both;
         }
     </style>
 </head>
