--- a/Graphic/three-study/src/index.html
+++ b/Graphic/three-study/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <script src="./main/main/main.js" type="module"></script>
+    <script src="./main/main.js" type="module"></script>
 </body>
 
 </html>
